--- a/Bab/bab4.tex
+++ b/Bab/bab4.tex
@@ -1,6 +1,7 @@
 \chapter{Perancangan}
 
 \section{Perancangan Antarmuka}
+\label{sec:perancangan_antarmuka}
 Perangkat lunak yang dibangun akan menggunakan tampilan antarmuka grafis. Tampilan antarmuka ini digunakan agar mempermudah interaksi pengguna dengan perangkat lunak. Selain itu, jenis tampilan ini juga digunakan untuk menghasilkan visualisasi penempatan kamera CCTV sehingga pengguna dapat memahami penempatan-penempatan tersebut secara visual. Pada bagian ini akan dijelaskan bentuk dari setiap antarmuka yang terdapat dalam perangkat lunak. Berikut bentuk antarmuka tersebut:
 
 \begin{itemize}
@@ -443,7 +444,7 @@ Kelas ini merepresentasikan status yang dapat dimiliki \textit{node}. Diagram ke
 	Pilihan ini menyatakan status \textit{infeasible}.
 \end{itemize}
 
-\subsection{Kelas BalasAdditiveBIPSolver}
+\subsection{Kelas \textit{BalasAdditiveBIPSolver}}
 \begin{figure}[H]
 	\centering  
 	\includegraphics[scale=0.6]{class_balas_additive_bip_solver}
